Navbar completed with routing

--- a/Ecommerce_Frontend/src/index.css
+++ b/Ecommerce_Frontend/src/index.css
@@ -1,3 +1,15 @@
+*{font-family: 'poppins'}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities{
+    .g{
+        @apply relative px-2
+    }
+    .g::after{
+        @apply duration-200 left-0 bottom-[-5px] content-[''] h-[3px] w-[0%] bg-red-500 absolute
+    }
+    .g:hover::after{
+        @apply w-full
+    }
+}
