--- a/Ecommerce_Frontend/src/index.css
+++ b/Ecommerce_Frontend/src/index.css
@@ -1,4 +1,8 @@
-*{font-family: 'poppins'}
+*{
+    font-family: 'poppins';
+    margin: 0;
+    padding: 0;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
